--- a/docs/assets/css/icons.css
+++ b/docs/assets/css/icons.css
@@ -23503,8 +23503,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-45:before {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .mdi-rotate-90 {
@@ -23527,8 +23527,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-90:before {
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .mdi-rotate-135 {
@@ -23551,8 +23551,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-135:before {
-  -webkit-transform: rotate(-135deg);
-  transform: rotate(-135deg);
+  -webkit-transform: rotate(135deg);
+  transform: rotate(135deg);
 }
 
 .mdi-rotate-180 {
@@ -23575,8 +23575,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-180:before {
-  -webkit-transform: rotate(-180deg);
-  transform: rotate(-180deg);
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .mdi-rotate-225 {
@@ -23599,8 +23599,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-225:before {
-  -webkit-transform: rotate(-225deg);
-  transform: rotate(-225deg);
+  -webkit-transform: rotate(225deg);
+  transform: rotate(225deg);
 }
 
 .mdi-rotate-270 {
@@ -23623,8 +23623,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-270:before {
-  -webkit-transform: rotate(-270deg);
-  transform: rotate(-270deg);
+  -webkit-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 
 .mdi-rotate-315 {
@@ -23647,8 +23647,8 @@ File: Icons Css File
 }
 
 .mdi-rotate-315:before {
-  -webkit-transform: rotate(-315deg);
-  transform: rotate(-315deg);
+  -webkit-transform: rotate(315deg);
+  transform: rotate(315deg);
 }
 
 .mdi-flip-h:before {
@@ -23678,8 +23678,8 @@ File: Icons Css File
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(-359deg);
-    transform: rotate(-359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 @keyframes mdi-spin {
@@ -23688,8 +23688,8 @@ File: Icons Css File
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(-359deg);
-    transform: rotate(-359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 
@@ -23714,8 +23714,8 @@ File: Icons Css File
 }
 
 .bx-ul {
-  margin-right: 2em;
-  padding-right: 0;
+  margin-left: 2em;
+  padding-left: 0;
   list-style: none;
 }
 
@@ -23727,7 +23727,7 @@ File: Icons Css File
   font-size: inherit;
   line-height: inherit;
   position: absolute;
-  right: -2em;
+  left: -2em;
   width: 2em;
   text-align: center;
 }
@@ -23738,8 +23738,8 @@ File: Icons Css File
     transform: rotate(0);
   }
   100% {
-    -webkit-transform: rotate(-359deg);
-    transform: rotate(-359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 @keyframes spin {
@@ -23748,8 +23748,8 @@ File: Icons Css File
     transform: rotate(0);
   }
   100% {
-    -webkit-transform: rotate(-359deg);
-    transform: rotate(-359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 @-webkit-keyframes burst {
@@ -23805,8 +23805,8 @@ File: Icons Css File
     opacity: 1;
   }
   75% {
-    -webkit-transform: translateX(20px);
-    transform: translateX(20px);
+    -webkit-transform: translateX(-20px);
+    transform: translateX(-20px);
     opacity: 0;
   }
 }
@@ -23817,8 +23817,8 @@ File: Icons Css File
     opacity: 1;
   }
   75% {
-    -webkit-transform: translateX(20px);
-    transform: translateX(20px);
+    -webkit-transform: translateX(-20px);
+    transform: translateX(-20px);
     opacity: 0;
   }
 }
@@ -23829,8 +23829,8 @@ File: Icons Css File
     opacity: 1;
   }
   75% {
-    -webkit-transform: translateX(-20px);
-    transform: translateX(-20px);
+    -webkit-transform: translateX(20px);
+    transform: translateX(20px);
     opacity: 0;
   }
 }
@@ -23841,8 +23841,8 @@ File: Icons Css File
     opacity: 1;
   }
   75% {
-    -webkit-transform: translateX(-20px);
-    transform: translateX(-20px);
+    -webkit-transform: translateX(20px);
+    transform: translateX(20px);
     opacity: 0;
   }
 }
@@ -23900,16 +23900,16 @@ File: Icons Css File
     transform: scale3d(1, 1, 1);
   }
   10%, 20% {
-    -webkit-transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, 10deg);
-    transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, 10deg);
+    -webkit-transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, -10deg);
+    transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, -10deg);
   }
   30%, 50%, 70%, 90% {
-    -webkit-transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, -10deg);
-    transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, -10deg);
-  }
-  40%, 60%, 80% {
     -webkit-transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, 10deg);
     transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, 10deg);
+  }
+  40%, 60%, 80% {
+    -webkit-transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, -10deg);
+    transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, -10deg);
   }
   to {
     -webkit-transform: scale3d(1, 1, 1);
@@ -23922,16 +23922,16 @@ File: Icons Css File
     transform: scale3d(1, 1, 1);
   }
   10%, 20% {
-    -webkit-transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, 10deg);
-    transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, 10deg);
+    -webkit-transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, -10deg);
+    transform: scale3d(0.95, 0.95, 0.95) rotate3d(0, 0, 1, -10deg);
   }
   30%, 50%, 70%, 90% {
-    -webkit-transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, -10deg);
-    transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, -10deg);
+    -webkit-transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, 10deg);
+    transform: scale3d(1, 1, 1) rotate3d(0, 0, 1, 10deg);
   }
   40%, 60%, 80% {
-    -webkit-transform: rotate3d(0, 0, 1, 10deg);
-    transform: rotate3d(0, 0, 1, 10deg);
+    -webkit-transform: rotate3d(0, 0, 1, -10deg);
+    transform: rotate3d(0, 0, 1, -10deg);
   }
   to {
     -webkit-transform: scale3d(1, 1, 1);
@@ -24044,30 +24044,30 @@ File: Icons Css File
 }
 
 .bx-pull-left {
-  float: right;
-  margin-left: 0.3em !important;
-}
-
-.bx-pull-right {
   float: left;
   margin-right: 0.3em !important;
 }
 
+.bx-pull-right {
+  float: right;
+  margin-left: 0.3em !important;
+}
+
 .bx-rotate-90 {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
 }
 
 .bx-rotate-180 {
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
 }
 
 .bx-rotate-270 {
-  -webkit-transform: rotate(-270deg);
-          transform: rotate(-270deg);
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
 }
 
@@ -28735,8 +28735,8 @@ File: Icons Css File
 
 .fa-ul {
   list-style-type: none;
-  margin-right: 2.5em;
-  padding-right: 0;
+  margin-left: 2.5em;
+  padding-left: 0;
 }
 
 .fa-ul > li {
@@ -28744,7 +28744,7 @@ File: Icons Css File
 }
 
 .fa-li {
-  right: -2em;
+  left: -2em;
   position: absolute;
   text-align: center;
   width: 2em;
@@ -28758,11 +28758,11 @@ File: Icons Css File
 }
 
 .fa-pull-left {
-  float: right;
+  float: left;
 }
 
 .fa-pull-right {
-  float: left;
+  float: right;
 }
 
 .fa.fa-pull-left,
@@ -28770,7 +28770,7 @@ File: Icons Css File
 .far.fa-pull-left,
 .fal.fa-pull-left,
 .fab.fa-pull-left {
-  margin-left: 0.3em;
+  margin-right: 0.3em;
 }
 
 .fa.fa-pull-right,
@@ -28778,7 +28778,7 @@ File: Icons Css File
 .far.fa-pull-right,
 .fal.fa-pull-right,
 .fab.fa-pull-right {
-  margin-right: 0.3em;
+  margin-left: 0.3em;
 }
 
 .fa-spin {
@@ -28797,8 +28797,8 @@ File: Icons Css File
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(-360deg);
-    transform: rotate(-360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 @keyframes fa-spin {
@@ -28807,26 +28807,26 @@ File: Icons Css File
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(-360deg);
-    transform: rotate(-360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 .fa-rotate-90 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .fa-rotate-180 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2)";
-  -webkit-transform: rotate(-180deg);
-  transform: rotate(-180deg);
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .fa-rotate-270 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=3)";
-  -webkit-transform: rotate(-270deg);
-  transform: rotate(-270deg);
+  -webkit-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 
 .fa-flip-horizontal {
@@ -28868,7 +28868,7 @@ File: Icons Css File
 
 .fa-stack-1x,
 .fa-stack-2x {
-  right: 0;
+  left: 0;
   position: absolute;
   text-align: center;
   width: 100%;
