--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -113,7 +113,7 @@ $pink:    #e83e8c;
 $red:     #EC0C1B;
 $orange:  #f1734f;
 $yellow:  #f1b44c;
-$green:   #34c38f;
+$green:   #008081;
 $teal:    #050505;
 $cyan:    #50a5f1;
 // scss-docs-end color-variables
