--- a/src/assets/scss/custom/styles.scss
+++ b/src/assets/scss/custom/styles.scss
@@ -775,3 +775,12 @@ thead {
 }
 
 //end pagination style
+
+.main-content-custom--full {
+  width: 100%;
+  margin-left: 0;
+}
+table .badge {
+  width: 100%;
+  border-radius: 50px;
+}
