--- a/docs/assets/css/icons.css
+++ b/docs/assets/css/icons.css
@@ -35531,4 +35531,6 @@ readers do not read off random characters that represent icons */
 
 .dripicons-zoom-out:before {
   content: "\e069";
+}s-zoom-out:before {
+  content: "\e069";
 }
