--- a/src/assets/scss/custom/plugins/icons/_fontawesome-all.scss
+++ b/src/assets/scss/custom/plugins/icons/_fontawesome-all.scss
@@ -675,7 +675,7 @@ readers do not read off random characters that represent icons */
 .fa-bullhorn:before {
   content: "\f0a1"; }
 
-.fa-bullseye:before {
+.fa-bullseyefa-bullseye:before {
   content: "\f140"; }
 
 .fa-burn:before {
