--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -10,7 +10,7 @@ $sidebar-menu-item-color:                             #545a6d;
 $sidebar-menu-sub-item-color:                         #545a6d;
 $sidebar-menu-item-icon-color:                        #7f8387;
 $sidebar-menu-item-hover-color:                       #383c40;
-$sidebar-menu-item-active-color:                      #556ee6;
+$sidebar-menu-item-active-color:                      #ec1c24;
 $sidebar-width:                                       250px;
 $sidebar-collapsed-width:                             70px;
 $sidebar-width-sm:                                    160px;
@@ -44,7 +44,7 @@ $footer-color:                                        #74788d;
 $topnav-bg:                                           $white;
 
 $menu-item-color:                                     #545a6d;
-$menu-item-active-color:                              #556ee6;
+$menu-item-active-color:                              #EC0C1B;
 
 // Right Sidebar
 $rightbar-width:                                      280px;
