--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -5875,3 +5875,14 @@ table .badge {
 .bxs-cloud-upload:before {
   color: #000;
 }
+
+.progress-bar {
+  background: #000;
+  background-color: #000;
+}
+
+.progress,
+.progress-stacked {
+  background: #000;
+  background-color: #000;
+}
