--- a/src/assets/scss/custom/styles.scss
+++ b/src/assets/scss/custom/styles.scss
@@ -961,3 +961,12 @@ table .badge {
 .bxs-cloud-upload:before {
   color: $black;
 }
+.progress-bar {
+  background: #000;
+  background-color: #000;
+}
+.progress,
+.progress-stacked {
+  background: #000;
+  background-color: #000;
+}
