--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -78,7 +78,7 @@ $table-dark-border-color:                           tint-color($gray-800, 7.5%);
 // scss-docs-start gray-color-variables
 $white:    #fff;
 $gray-100: #f8f9fa;
-$gray-200: #eff2f7;
+$gray-200: #BDBDBD;
 $gray-300: #f6f6f6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
